# dingtalk-violation-detector

./: .gitignore  DESIGN.md  Image 2.html  LICENSE  README.md  build.bat  build_mac.sh  detector.py  detector_cli.py  flet.spec  flet_gui.py  gui.py  main.py  main_flet.py  notifier.py  requirements.txt  smartsheet.py  违规检测.spec  钉钉违规检测工具.spec
.github/workflows/: build-rscanner.yml  build.yml
.qoder/plans/: refactor-gui-delete-feature.md
V3/: detector.py  gui.py  main.py
rscanner/: Cargo.toml  PROGRESS.md  index.html  package-lock.json  package.json
rscanner/crates/notifier/: Cargo.toml
rscanner/crates/notifier/src/: lib.rs
rscanner/crates/scanner-core/: Cargo.toml
rscanner/crates/scanner-core/src/: scanner.rs  types.rs
rscanner/docs/: 使用说明.md  使用说明书.html  图片生成提示词.md
rscanner/src/: App.tsx  index.css
rscanner/src-tauri/: Cargo.toml  tauri.conf.json
rscanner/src-tauri/capabilities/: default.json
rscanner/src-tauri/src/: lib.rs  main.rs
rscanner/src/components/: ActionBar.tsx  ContextMenu.tsx  NameInput.tsx  PhaseProgress.tsx  ResultTree.tsx  Sidebar.tsx  StatsPanel.tsx  StatusBar.tsx
