[package]
name = "rscanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "rscanner_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
scanner-core = { path = "../crates/scanner-core" }
notifier = { path = "../crates/notifier" }
