[package]
name = "scanner-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
rayon = "1"
crossbeam-channel = "0.5"
chrono = { version = "0.4", features = ["serde"] }
trash = "5"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = { version = "0.52", features = ["transactions"] }
